[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/ui/FightResultTab_UI.gd" type="Script" id=1]
[ext_resource path="res://textures/ui/Porazka.png" type="Texture" id=2]
[ext_resource path="res://textures/ui/Sukces.png" type="Texture" id=3]
[ext_resource path="res://textures/ui/Text.png" type="Texture" id=4]
[ext_resource path="res://fonts/aliiewriting_dynamicfont.tres" type="DynamicFont" id=5]
[ext_resource path="res://textures/ui/back_button_hover.png" type="Texture" id=6]
[ext_resource path="res://textures/ui/back_button.png" type="Texture" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 29, 25, 526, 339 )

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Tab_FightResult" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 480.0
margin_bottom = 720.0

[node name="TabResultCont" type="TabContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 498.0
size_flags_vertical = 3
custom_styles/tab_fg = SubResource( 1 )
custom_styles/tab_bg = SubResource( 2 )
custom_styles/panel = SubResource( 3 )
tabs_visible = false

[node name="LoseTexture" type="TextureRect" parent="MarginContainer/VBoxContainer/TabResultCont"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true

[node name="MarginContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabResultCont"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WinTexture" type="TextureRect" parent="MarginContainer/VBoxContainer/TabResultCont/MarginContainer"]
margin_right = 480.0
margin_bottom = 247.0
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true

[node name="Panel" type="PanelContainer" parent="MarginContainer/VBoxContainer/TabResultCont/MarginContainer"]
margin_top = 251.0
margin_right = 480.0
margin_bottom = 498.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabResultCont/MarginContainer/Panel"]
margin_right = 480.0
margin_bottom = 247.0
custom_constants/margin_right = 50
custom_constants/margin_top = 30
custom_constants/margin_left = 50
custom_constants/margin_bottom = 30

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabResultCont/MarginContainer/Panel/MarginContainer"]
margin_left = 50.0
margin_top = 30.0
margin_right = 430.0
margin_bottom = 217.0

[node name="LootList" type="ItemList" parent="MarginContainer/VBoxContainer/TabResultCont/MarginContainer/Panel/MarginContainer/ScrollContainer"]
margin_right = 380.0
margin_bottom = 187.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 5 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
same_column_width = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 502.0
margin_right = 480.0
margin_bottom = 720.0
alignment = 2

[node name="BackButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 299.0
margin_right = 480.0
margin_bottom = 218.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
[connection signal="item_activated" from="MarginContainer/VBoxContainer/TabResultCont/MarginContainer/Panel/MarginContainer/ScrollContainer/LootList" to="." method="_on_LootList_item_activated"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
